# ModernGL

./: .gitignore  .gitkeep  README.md  meson.build
sandbox/: main.cpp  meson.build
squeaky/: meson.build
squeaky/include/sq/core/: core.hpp  display.cpp  display.hpp
subprojects/: glew.wrap  glm.wrap  sdl2.wrap  spdlog.wrap
